--- a/client-app/package.json
+++ b/client-app/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "date-fns": "^2.0.0",
     "final-form": "^4.19.1",
+    "jalali-react-datepicker": "0.0.1-alpha-01",
     "jquery": "^3.4.1",
     "materialize-css": "^1.0.0",
     "react": "^16.13.1",
