--- a/API/API.csproj
+++ b/API/API.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>7f6c4b9c-96be-499a-9115-7f789c0f8896</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Application\Application.csproj"/>
@@ -10,5 +11,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3"/>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3"/>
   </ItemGroup>
 </Project>
