--- a/client-app/package.json
+++ b/client-app/package.json
@@ -7,23 +7,31 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
-    "@types/materialize-css": "^1.0.7",
+    "@types/jquery": "^3.3.35",
     "@types/node": "^12.12.34",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.3",
+    "@types/revalidate": "^1.1.2",
     "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "date-fns": "^2.0.0",
     "final-form": "^4.19.1",
     "jalali-react-datepicker": "0.0.1-alpha-01",
-    "jquery": "^3.4.1",
-    "materialize-css": "^1.0.0",
+    "jquery": "^3.5.0",
+    "mobx": "^5.15.4",
+    "mobx-react-lite": "^2.0.5",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.4.0",
     "react-persian-datepicker": "^3.0.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-toastify": "^5.5.0",
+    "revalidate": "^1.2.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
