--- a/client-app/package.json
+++ b/client-app/package.json
@@ -22,6 +22,7 @@
     "jquery": "^3.5.0",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^2.0.5",
+    "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-chartjs-2": "^2.9.0",
