--- a/Persistence/Persistence.csproj
+++ b/Persistence/Persistence.csproj
@@ -9,5 +9,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.3"/>
   </ItemGroup>
 </Project>
