--- a/client-app/package.json
+++ b/client-app/package.json
@@ -28,6 +28,7 @@
     "react-chartjs-2": "^2.9.0",
     "react-confirm-alert": "^2.6.1",
     "react-dom": "^16.13.1",
+    "react-dropzone-uploader": "^2.11.0",
     "react-final-form": "^6.4.0",
     "react-persian-datepicker": "^3.0.2",
     "react-router-dom": "^5.1.2",
